Implement Repository Mapping via Aider Service (#564)
* rh

* repomap

* Create file tests/repomap.rs

* Create file src/server/services/repomap.rs

* Create file src/server/routes/repomap.rs

* Create file templates/pages/repomap.html

* Create file src/server/services/mod.rs

* Update mod.rs

* Create file src/server/routes/mod.rs

* Delete src/server/routes.rs

* Update Cargo.toml

* Update mod.rs

* Update config.rs

* Update Cargo.toml

* Update repomap.html

* Update config.rs

* Update repomap.rs

* Update repomap.html

* Update content.html

* Update repomap.html

* Update repomap.rs

* Update lib.rs

* cargotoml

* Update repomap.rs

* Update main.rs

* Update repomap.rs

* Delete src/server/routes/mod.rs

* Delete src/server/routes/repomap.rs

* Update main.rs

* Update repomap.rs

* Update lib.rs

* Update lib.rs

* Update mod.rs

* Update config.rs

* Update main.rs

* Update repomap.rs

* Update lib.rs

* Update main.rs

* Update lib.rs

* Update repomap.rs

* Update lib.rs

* Update repomap.rs

* Update lib.rs

* Update repomap.rs

* Update repomap.rs

* Update lib.rs

* Update repomap.rs

* Update repomap.rs

* Update Cargo.toml

* Update repomap.rs

* Update repomap.rs

* cargolock

* feat: Add new blog post about Repo Map Tool on home page

* feat: Add link to repo map tool and clean up blog post formatting

* home template

* feat: Add Markdown support for blog posts using pulldown-cmark

* feat: Add markdown link to Repo Map Tool blog post

* feat: Add markdown filter to Askama for rendering blog post content

* refactor: Remove duplicate markdown filter and import from template_filters module

* fix: Resolve Askama template and filter registration errors

* chore: Register markdown filter and update blog template

* fix: Remove incorrect Askama filter registration and temporarily disable markdown filter

* feat: Implement ma

--- a/templates/pages/home.html
+++ b/templates/pages/home.html
@@ -20,7 +20,7 @@
         </p>
         <p class="text-sm">
           <a href="/onyx" class="text-white/80 hover:text-white underline"
-            >Download Onyx in beta for Android & iOS now.</a
+            >Download Onyx in beta for Android &amp; iOS now.</a
           >
         </p>
       </div>
@@ -84,8 +84,18 @@
   <div class="border border-white p-6">
     <h2 class="text-lg font-bold mb-6">Latest Updates</h2>
 
-    {% call blog::blog_post( "January 14, 2025", "New Website", "We have a new
-    website! It uses Rust, HTMX, and a new font Berkeley Mono from the US
-    Graphics Company, from which we also drew inspiration on design." ) %}
+    {% call blog::blog_post("January 16, 2025", "Repo Map Tool", "
+    <p>
+      We've released a small tool for generating a concise map of a GitHub repo,
+      optimized for LLM chats &amp; agents, using the Aider repo map.
+      <a href=\"/repomap\" class=\"font-bold underline\">Try it here!</a>
+    </p>
+    ") %} {% call blog::blog_post("January 14, 2025", "New Website", "
+    <p>
+      We have a new website! It uses Rust, HTMX, and a new font Berkeley Mono
+      from the US Graphics Company, from which we also drew inspiration on
+      design.
+    </p>
+    ") %}
   </div>
 </div>
