--- a/templates/layouts/content.html
+++ b/templates/layouts/content.html
@@ -3,6 +3,7 @@
   "/onyx" %} {% include "pages/onyx.html" %} {% when "/video-series" %} {%
   include "pages/video-series.html" %} {% when "/services" %} {% include
   "pages/services.html" %} {% when "/company" %} {% include "pages/company.html"
-  %} {% when "/coming-soon" %} {% include "pages/coming-soon.html" %} {% else %}
-  {% include "pages/404.html" %} {% endmatch %}
+  %} {% when "/coming-soon" %} {% include "pages/coming-soon.html" %} {% when
+  "/repomap" %} {% include "pages/repomap.html" %} {% else %} {% include
+  "pages/404.html" %} {% endmatch %}
 </div>
